modified:   js/result.js 	modified:   result.html

--- a/result.html
+++ b/result.html
@@ -119,8 +119,7 @@
                   <span>Reanalysis</span>
                 </div>
                 <div class="col d-flex flex-column align-items-center">
-                  <i class="bi bi-share" alt="Share" style="font-size: 3rem; cursor: pointer" id="share-icon"
-                  data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+                  <i class="bi bi-share" alt="Share" style="font-size: 3rem; cursor: pointer" id="share-icon"></i>
                   <span>Share</span>
                 </div>
               </div>
