modified:   js/result.js 	modified:   result.html

--- a/result.html
+++ b/result.html
@@ -98,7 +98,7 @@
         <div class="container">
           <div class="row">
             <!-- ---------------progress indicator --------------- -->
-            <div class="col-md-2 col-lg-2  justify-content-center"></div>
+            <div class="col-md-1 col-lg-2  justify-content-center"></div>
             <div class="col-md-4 col-lg-2 d-flex justify-content-center">
               <div id="progress_indicator-container" class="progress_indicator progress_indicator-red">
                 <span id="progress_indicator-data" style="font-weight: bold;">0%</span>
@@ -109,7 +109,7 @@
               <div id="deepfake-message" class="result_message-container card-container">
                 ✔ The Audio is Safe: No Deepfake Content Detected.
               </div>
-              <div class="row py-5">
+              <div class="row d-flex py-5">
                 <div class="col d-flex flex-column align-items-center">
                   <i class="bi bi-soundwave" style="font-size: 3rem;"></i>
                   <span id="file_name-label">test.wav</span>
