--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link" href="result.html">Results</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="about_us.html">About Us</a>
           </li>
           <li class="nav-item">
